--- a/configs/sim.qttangent/qttangent.ui
+++ b/configs/sim.qttangent/qttangent.ui
@@ -1346,7 +1346,7 @@ Delete</string>
                      <enum>QTabWidget::South</enum>
                     </property>
                     <property name="currentIndex">
-                     <number>0</number>
+                     <number>4</number>
                     </property>
                     <widget class="QWidget" name="tabDRO">
                      <attribute name="title">
@@ -1448,6 +1448,18 @@ Delete</string>
                          <item>
                           <widget class="QWidget" name="widget_dro_x" native="true">
                            <layout class="QHBoxLayout" name="horizontalLayout_3">
+                            <property name="leftMargin">
+                             <number>4</number>
+                            </property>
+                            <property name="topMargin">
+                             <number>10</number>
+                            </property>
+                            <property name="rightMargin">
+                             <number>0</number>
+                            </property>
+                            <property name="bottomMargin">
+                             <number>0</number>
+                            </property>
                             <item>
                              <widget class="QLabel" name="label_g5x_xx">
                               <property name="maximumSize">
@@ -1588,6 +1600,18 @@ Delete</string>
                                </size>
                               </property>
                               <layout class="QHBoxLayout" name="horizontalLayout_8">
+                               <property name="leftMargin">
+                                <number>0</number>
+                               </property>
+                               <property name="topMargin">
+                                <number>0</number>
+                               </property>
+                               <property name="rightMargin">
+                                <number>0</number>
+                               </property>
+                               <property name="bottomMargin">
+                                <number>0</number>
+                               </property>
                                <item>
                                 <widget class="ActionButton" name="dro_home_x">
                                  <property name="sizePolicy">
@@ -1875,6 +1899,18 @@ Origin</string>
                          <item>
                           <widget class="QWidget" name="widget_dro_y" native="true">
                            <layout class="QHBoxLayout" name="horizontalLayout_9">
+                            <property name="leftMargin">
+                             <number>4</number>
+                            </property>
+                            <property name="topMargin">
+                             <number>10</number>
+                            </property>
+                            <property name="rightMargin">
+                             <number>0</number>
+                            </property>
+                            <property name="bottomMargin">
+                             <number>0</number>
+                            </property>
                             <item>
                              <widget class="QLabel" name="label_g5x_yy">
                               <property name="maximumSize">
@@ -2015,6 +2051,18 @@ Origin</string>
                                </size>
                               </property>
                               <layout class="QHBoxLayout" name="horizontalLayout_12">
+                               <property name="leftMargin">
+                                <number>0</number>
+                               </property>
+                               <property name="topMargin">
+                                <number>0</number>
+                               </property>
+                               <property name="rightMargin">
+                                <number>0</number>
+                               </property>
+                               <property name="bottomMargin">
+                                <number>0</number>
+                               </property>
                                <item>
                                 <widget class="ActionButton" name="dro_home_y">
                                  <property name="sizePolicy">
@@ -2284,6 +2332,18 @@ Origin</string>
                          <item>
                           <widget class="QWidget" name="widget_dro_z" native="true">
                            <layout class="QHBoxLayout" name="horizontalLayout_10">
+                            <property name="leftMargin">
+                             <number>4</number>
+                            </property>
+                            <property name="topMargin">
+                             <number>10</number>
+                            </property>
+                            <property name="rightMargin">
+                             <number>0</number>
+                            </property>
+                            <property name="bottomMargin">
+                             <number>0</number>
+                            </property>
                             <item>
                              <widget class="QLabel" name="label_g5x_zz">
                               <property name="maximumSize">
@@ -2427,6 +2487,18 @@ Origin</string>
                                </size>
                               </property>
                               <layout class="QHBoxLayout" name="horizontalLayout_16">
+                               <property name="leftMargin">
+                                <number>0</number>
+                               </property>
+                               <property name="topMargin">
+                                <number>0</number>
+                               </property>
+                               <property name="rightMargin">
+                                <number>0</number>
+                               </property>
+                               <property name="bottomMargin">
+                                <number>0</number>
+                               </property>
                                <item>
                                 <widget class="ActionButton" name="dro_home_z">
                                  <property name="sizePolicy">
@@ -2690,6 +2762,18 @@ Origin</string>
                          <item>
                           <widget class="QWidget" name="widget_dro_w" native="true">
                            <layout class="QHBoxLayout" name="horizontalLayout_11">
+                            <property name="leftMargin">
+                             <number>4</number>
+                            </property>
+                            <property name="topMargin">
+                             <number>10</number>
+                            </property>
+                            <property name="rightMargin">
+                             <number>0</number>
+                            </property>
+                            <property name="bottomMargin">
+                             <number>0</number>
+                            </property>
                             <item>
                              <widget class="QLabel" name="label_g5x_ww">
                               <property name="maximumSize">
@@ -2833,6 +2917,18 @@ Origin</string>
                                </size>
                               </property>
                               <layout class="QHBoxLayout" name="horizontalLayout_17">
+                               <property name="leftMargin">
+                                <number>0</number>
+                               </property>
+                               <property name="topMargin">
+                                <number>0</number>
+                               </property>
+                               <property name="rightMargin">
+                                <number>0</number>
+                               </property>
+                               <property name="bottomMargin">
+                                <number>0</number>
+                               </property>
                                <item>
                                 <widget class="ActionButton" name="dro_home_w">
                                  <property name="sizePolicy">
@@ -3132,8 +3228,7 @@ Origin</string>
                                </size>
                               </property>
                               <property name="text">
-                               <string>Home
-All</string>
+                               <string> ALL</string>
                               </property>
                               <property name="indicator_option" stdset="0">
                                <bool>false</bool>
@@ -3271,6 +3366,9 @@ All</string>
                               </property>
                               <property name="unhome_action" stdset="0">
                                <bool>false</bool>
+                              </property>
+                              <property name="home_no_unhome_option" stdset="0">
+                               <bool>true</bool>
                               </property>
                               <property name="template_label_option" stdset="0">
                                <bool>false</bool>
@@ -3830,60 +3928,55 @@ Selected Tool</string>
                      </attribute>
                      <layout class="QVBoxLayout" name="verticalLayout_22">
                       <item>
-                       <widget class="QTableWidget" name="tableWidgetLog">
-                        <property name="frameShape">
-                         <enum>QFrame::NoFrame</enum>
-                        </property>
-                        <property name="horizontalScrollBarPolicy">
-                         <enum>Qt::ScrollBarAlwaysOff</enum>
-                        </property>
-                        <property name="editTriggers">
-                         <set>QAbstractItemView::NoEditTriggers</set>
-                        </property>
-                        <property name="tabKeyNavigation">
+                       <widget class="MachineLog" name="machineLog">
+                        <property name="machine_log_option" stdset="0">
                          <bool>false</bool>
                         </property>
-                        <property name="showDropIndicator" stdset="0">
-                         <bool>false</bool>
+                        <property name="machine_log_severity_option" stdset="0">
+                         <bool>true</bool>
                         </property>
-                        <property name="dragDropOverwriteMode">
-                         <bool>false</bool>
+                        <property name="critical_fg_color_option" stdset="0">
+                         <color>
+                          <red>249</red>
+                          <green>240</green>
+                          <blue>107</blue>
+                         </color>
                         </property>
-                        <property name="alternatingRowColors">
-                         <bool>false</bool>
+                        <property name="critical_bg_color_option" stdset="0">
+                         <color>
+                          <red>165</red>
+                          <green>29</green>
+                          <blue>45</blue>
+                         </color>
                         </property>
-                        <property name="selectionMode">
-                         <enum>QAbstractItemView::NoSelection</enum>
+                        <property name="error_fg_color_option" stdset="0">
+                         <color>
+                          <red>255</red>
+                          <green>255</green>
+                          <blue>255</blue>
+                         </color>
                         </property>
-                        <property name="selectionBehavior">
-                         <enum>QAbstractItemView::SelectRows</enum>
+                        <property name="error_bg_color_option" stdset="0">
+                         <color>
+                          <red>224</red>
+                          <green>27</green>
+                          <blue>36</blue>
+                         </color>
                         </property>
-                        <property name="showGrid">
-                         <bool>false</bool>
+                        <property name="warning_fg_color_option" stdset="0">
+                         <color>
+                          <red>245</red>
+                          <green>194</green>
+                          <blue>17</blue>
+                         </color>
                         </property>
-                        <property name="gridStyle">
-                         <enum>Qt::NoPen</enum>
+                        <property name="debug_fg_color_option" stdset="0">
+                         <color>
+                          <red>53</red>
+                          <green>132</green>
+                          <blue>228</blue>
+                         </color>
                         </property>
-                        <property name="cornerButtonEnabled">
-                         <bool>false</bool>
-                        </property>
-                        <property name="columnCount">
-                         <number>2</number>
-                        </property>
-                        <attribute name="horizontalHeaderVisible">
-                         <bool>false</bool>
-                        </attribute>
-                        <attribute name="horizontalHeaderHighlightSections">
-                         <bool>false</bool>
-                        </attribute>
-                        <attribute name="verticalHeaderVisible">
-                         <bool>false</bool>
-                        </attribute>
-                        <attribute name="verticalHeaderHighlightSections">
-                         <bool>false</bool>
-                        </attribute>
-                        <column/>
-                        <column/>
                        </widget>
                       </item>
                       <item>
@@ -6547,6 +6640,11 @@ Power</string>
    <class>FileManager</class>
    <extends>QWidget</extends>
    <header>qtvcp.widgets.file_manager</header>
+  </customwidget>
+  <customwidget>
+   <class>MachineLog</class>
+   <extends>QWidget</extends>
+   <header>qtvcp.widgets.machine_log</header>
   </customwidget>
   <customwidget>
    <class>StateEnableGridLayout</class>
